Fix numerical inaccuracy in background-size auto

M-72 merge.

We were using intrinsic_width * tile_size / intrinsic_height to
compute the auto size when only one dimension is given. The values
are in LayoutUnits and the expression overflows when the tile is
large and the image is large, resulting in significant distortion
of the background. The effect is most prominent on high-dpi devices
but also manifests at high zoom.

Bug: 921269
Change-Id: I78c2d0adf3c23b1b9d4158d2ffe8d775b3f5b9f4
Reviewed-on: https://chromium-review.googlesource.com/c/1413175
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Reviewed-by: Florin Malita <fmalita@chromium.org>
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#623564}(cherry picked from commit 1d00042dc1257943980c87afe15c106831c6c0d8 [formerly 2dd4985ba4d4952fd0ea9b85ac2111b161ef389f])
Reviewed-on: https://chromium-review.googlesource.com/c/1426441
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#750}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 23817b492070789595de677d7c8e0e35e6eb262e